--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+:root {
+    --background-clr: #f9f9f7;
+    --accent-clr: #968374;
+}
+
 
 body {
     min-height: 100%;
@@ -6,12 +11,13 @@ body {
     font-weight: 300;
     font-size: 1.1rem;
     position: relative;
-    background-color: #f9f9f7;
+    background-color: var(--background-clr);
 }
 
 body header {
     max-width: 1500px;
     margin: auto;
+    
 }
 
 header::after {
@@ -57,7 +63,7 @@ nav a {
 }
 
 nav a:hover {
-    color: #606352;
+    color: var(--accent-clr);
 }
 
 label #button,
@@ -205,14 +211,14 @@ label #cancel {
 }
 
 #inquireButton {
-    background-color: #606352;
+    background-color: var(--accent-clr);
     border: none;
-    color: #f4f1ec;
+    color: var(--background-clr);
     width: 175px;
     height: 40px;
     font-size: .9rem;
     text-decoration: none;
-    border-color: #f4f1ec;
+    border-color: var(--background-clr);
     font-family: 'Playfair Display', serif;
     transition-duration: 250ms;
 } 
@@ -222,10 +228,10 @@ label #cancel {
 }
 
 #inquireButton:hover {
-    background-color: #f4f1ec;
-    color: #606352;
-    border-color: #606352;
-    border: 1px solid #606352;
+    background-color: var(--background-clr);
+    color: var(--accent-clr);
+    border-color: var(--accent-clr);
+    border: 1px solid var(--accent-clr);
     cursor: pointer;
 }
 
@@ -279,8 +285,8 @@ label #cancel {
   }
 
   #aboutline {
-    background-color: #606352ab;
-    color: #606352ab;
+    background-color: var(--accent-clr);
+    color: var(--accent-clr);
     height: .005rem;
     border-width: 1;
     margin-top: 30px;
@@ -344,12 +350,39 @@ label #cancel {
 
 /*portfolio*/
 
-#split-3 {
+/* #split-3 {
     display: flex;
     flex-direction: row;
 }
 
-.portfolio-container {
+.modal {
+    display: block; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgba(0,0,0,0.4); 
+    backdrop-filter: blur(4px);
+  }
+  
+
+  .modal-content {
+    background-color: #fff;
+    margin: 25% auto; 
+    padding: 20px 20px 20px 65px;
+    border: 1px solid #888;
+    width: 40%; 
+    background-color: #fff;
+    /* background-image:
+    linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px),
+    linear-gradient(#eee .1em, transparent .1em);
+    background-size: 100% 1.3em; */
+  /* } */
+
+/* .portfolio-container {
     float: left;
     width: 33.33%;
     margin-top: -13px;
@@ -423,7 +456,36 @@ label #cancel {
 #portfolio-container {
     margin: auto;
     max-width: 1500px;
+} */ 
+
+#portfolio-container {
+    max-width: 1500px;
+    margin: auto;
 }
+
+#photos {
+    line-height: 4;
+    -webkit-column-count: 2;
+    -webkit-column-gap: 3%;
+    -moz-column-count: 2;
+    -moz-column-gap: 3%;
+    column-count: 2;
+    column-gap: 3%;  
+    margin: 0 10% 0 10%;
+  }
+
+  @media (max-width: 934px) {
+    #photos {
+        line-height: 3;
+      }
+  }
+
+  @media (max-width: 657px) {
+    #photos {
+        line-height: 2;
+      }
+  }
+  
 
 /*investment*/
 
@@ -451,34 +513,75 @@ footer a {
 }
 
 footer a:hover {
-    color: #606352;
+    color: var(--accent-clr);
+}
+
+/* inquire styling  */
+#inquire-photo-container{
+    max-width: 900px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+}
+
+#inquire-photo {
+    
+}
+
+#inquire-text {
+    max-width: 800px;
+    margin: auto;
+    padding: 50px;
+    color: #8c8c8c;
 }
 
 #inquireSection {
-    /* height: 100vh; */
-    width: 40%;
+    max-width: 1500px;
+    margin: auto;
+    width: 41%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
 
-#inquire {
-    width: 90%;
-    max-height: 0px;
-    margin: 0;
-    padding: 20px;
-}
+::-webkit-input-placeholder { 
+    font-family: 'Playfair Display', serif;
+  }
+  ::-moz-placeholder { 
+    font-family: 'Playfair Display', serif;
+  }
+  :-ms-input-placeholder { 
+    font-family: 'Playfair Display', serif;
+  }
+  :-moz-placeholder { 
+    font-family: 'Playfair Display', serif;
+  }
 
 .formClass {
     width: 100%;
-    padding-top: 10px;
+    padding-top: 20px;
+    line-height: 2;
 }
 
 .formClass input,
 .formClass textarea {
     width: 100%;
     border: 1px solid rgb(32, 32, 32);
+    background-color: var(--background-clr);
+    border-color: #aaaaaa;
+    color: #aaaaaa;
+}
+
+.formClass label {
+    color: #aaaaaa;
+}
+
+.formClass input {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom-color: #aaaaaa;
 }
 
 textarea {
@@ -540,9 +643,10 @@ button[type="submit"]:hover {
 } 
 
 #anyssa-sands {
-    color:#606352;
+    color:var(--accent-clr);
     font-size: 3rem;
     margin-bottom: 25px;
+    font-family: 'Nothing You Could Do', cursive;
 }
 
 #fun-things {
@@ -557,7 +661,7 @@ button[type="submit"]:hover {
     content:'';
     width:35%;
     height:2px;
-    background:#606352;
+    background:var(--accent-clr);
     position:absolute;
     top:-40px;
     right: 30px;
@@ -572,7 +676,7 @@ button[type="submit"]:hover {
     content:'';
     width:2px;
     height:65%;
-    background:#606352;
+    background:var(--accent-clr);
     position:absolute;
     top:-40px;
     right: 30px;
@@ -600,6 +704,14 @@ button[type="submit"]:hover {
     max-width: 70%;
     margin: auto;
     margin-bottom: 20px;
+}
+
+#kind-words {
+    font-family: 'Alex Brush', cursive;
+    position: absolute;
+    margin: -180px 0 0px 400px;
+    font-size: 3rem;
+    color: #292929e2;
 }
 
 #review-1{
@@ -638,9 +750,10 @@ button[type="submit"]:hover {
 }
 
 #review-background {
-    background-color: #dabb9b;
-    background-image: url("https://www.transparenttextures.com/patterns/brushed-alum-dark.png");
+    background-color: #e9e9e9;
+    /* background-image: url("https://www.transparenttextures.com/patterns/black-thread-light.png"); */
     margin: 100px 0px 50px 0px;
+    position: relative;
 }
 
 #review-1-container {
@@ -656,7 +769,7 @@ button[type="submit"]:hover {
     content:'';
     width:2px;
     height:45%;
-    background:#606352;
+    background:var(--accent-clr);
     position:absolute;
     top: 100px;
     right: -45px;
@@ -666,7 +779,7 @@ button[type="submit"]:hover {
     content:'';
     width:45%;
     height:2px;
-    background:#606352;
+    background:var(--accent-clr);
     position:absolute;
     top:310px;
     right: 570px;
@@ -696,15 +809,37 @@ button[type="submit"]:hover {
 }
 
 .insta-photos {
-    max-width: 150px;
-    margin: 0px 20px 50px 20px;
-    border-radius: 5px;
-
+    max-width: 210px;
+    margin: 0px 10px 50px 10px;
+    border-radius: 0px;
 }
 
-#insta-icon {
-    max-width: 50px;
-    margin: 60px 0px 15px 0px;
+@media (max-width: 811px) {
+    .insta-photos {
+        max-width: 200px;
+    }
+}
+
+@media (max-width: 662px) {
+    .insta-photos {
+        max-width: 150px;
+    }
+}
+
+@media (max-width: 511px) {
+    .insta-photos {
+        margin: -4px 0px 0px 0px;
+    
+    }
+}
+
+#follow-me {
+    margin: 130px 0px 15px 0px;
+}
+
+#follow-me a { 
+    text-decoration: none;
+    color: rgb(32, 32, 32)
 }
 
 #insta-icon:hover {
@@ -717,4 +852,10 @@ button[type="submit"]:hover {
 
 #instagram div p {
     margin-bottom: 40px;
+}
+
+/* inquire style  */
+
+form input {
+    outline:  none;
 }
