--- a/src/style.css
+++ b/src/style.css
@@ -1047,3 +1047,25 @@ h3 {
     list-style: none;
     color:#919191
 }
+
+
+#email-add {
+    max-width: 500px;
+}
+
+.pricing-section {
+    animation: fadeInAnimation ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
+}
