--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 :root {
     --background-clr: #f9f9f7;
     --accent-clr: #968374;
+    --secondary-clr: #347b8b;
 
     --main-font: adobe-garamond-pro, serif;
 }
@@ -34,6 +35,10 @@ header::after {
     margin: -55px 0 0 30px;
 }
 
+.is-active {
+    color: var(--accent-clr);
+}
+
 nav {
     float: right;
 }
@@ -54,8 +59,7 @@ nav li {
 nav a {
     color: rgb(32, 32, 32);
     text-decoration: none;
-    font-size: 1.1rem;  
-    font-size: 18px;
+    font-size: 1.22rem;  
     transition-duration: 250ms;
 }
 
@@ -96,11 +100,7 @@ label #cancel {
 @media (max-width: 910px){
     label #button {
         display: block;
-        
-        
     }
-
-
 
     nav ul {
         position: fixed;
@@ -148,10 +148,20 @@ label #cancel {
     margin: -100px auto auto auto;
 }
 
+.row3 {
+    max-width: 1200px;
+    margin: 75px auto 50px auto;
+}
+
 .column-pics  {
     float: left;
     width: 33.33%;
     margin: -13px 0 25px 0;
+  }
+
+  .column-pics2 {
+    float: left;
+    width: 33.33%;
   }
 
   .column-pics img {
@@ -168,11 +178,9 @@ label #cancel {
   
   .homepage {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     margin: auto;
     max-width: 85%;
-    padding: 0px;
-    padding-top: 0px;
   }
   
   @media screen and (max-width: 600px) {
@@ -180,13 +188,23 @@ label #cancel {
       width: 100%;
     }
   }
-  #bobD {
+
+  .quote {
     text-align: center;
     font-size: 1.25rem;
     margin-top: 110px;
     color: rgb(91, 90, 90);
     font-family: 'Cinzel', serif;
+  }
+
+  .quote2 {
+    text-align: center;
+    font-size: 1.25rem;
+    color: rgb(91, 90, 90);
+    font-family: 'Cinzel', serif;
 }
+
+
 .back-img {
     background-image: url("./Data/Home/suze-trey-gray.jpeg");
     min-height: 100%;
@@ -230,7 +248,8 @@ label #cancel {
     font-family: var(--main-font);
     transition-duration: 250ms;
     text-transform: uppercase;
-} 
+}
+
 #buttonid {
     text-align: center;
 }
@@ -247,13 +266,13 @@ label #cancel {
     background-color: var(--accent-clr);
     border: none;
     color: var(--background-clr);
-    width: 130px;
-    height: 40px;
+    width: 100px;
+    height: 30px;
     font-size: .9rem;
     text-decoration: none;
     border-color: var(--background-clr);
     font-family: var(--main-font);
-    transition-duration: 250ms; 
+    transition-duration: 250ms;
 }
 
 
@@ -472,7 +491,7 @@ footer a:hover {
 
 .formClass {
     width: 100%;
-    padding-top: 20px;
+    padding-top: 15px;
     line-height: 2;
 }
 
@@ -498,19 +517,6 @@ footer a:hover {
 
 textarea {
     resize: vertical;
-}
-button[type="submit"] {
-    border-width: 1px;
-    border-radius: 5px;
-    padding-top: 20px;
-    font-family: var(--main-font);
-    font-size: .9rem;
-    background-color: #f4f1ec;
-    transition-duration: 250ms;
-}
-
-button[type="submit"]:hover {
-    background-color: #e9e9e9;
 }
 
 #status {
@@ -623,7 +629,7 @@ button[type="submit"]:hover {
     position: absolute;
     margin: -180px 0px 0px 400px;
     font-size: 3rem;
-    color: #292929e2;
+    color: var(--accent-clr);
 }
 
 @media (max-width: 643px) {
@@ -815,6 +821,21 @@ form input {
     outline:  none;
 }
 
+#contact-container {
+    max-width: 1500px;
+    margin: auto;
+    text-align: center;
+    margin-top: -50px;
+    margin-bottom: 50px;
+}
+
+#contact-me {
+    font-weight: 100;
+    font-family: 'Nothing You Could Do', cursive;
+    color: var(--accent-clr);
+    font-size: 3rem;
+}
+
 /* investment styling */
 
 #investment-main {
@@ -976,4 +997,40 @@ h3 {
     100% {
         opacity: 1;
      }
+}
+
+#hello {
+    color: var(--accent-clr);
+    text-align: center;
+    font-size: 1.3rem;
+    margin-top: 500px;
+}
+
+@media (max-width: 1000px) {
+    #hello {
+        color: var(--accent-clr);
+        text-align: center;
+        font-size: 1.3rem;
+        margin-top: 53%;
+    }
+}
+
+#anyssa {
+    font-family: 'Nothing You Could Do', cursive;
+    font-size: 1.5rem;
+    color: var(--accent-clr);
+    text-align: right;
+    padding: 10px 120px 0px 0px;
+}
+
+@media (max-width: 1000px) {
+    #anyssa {
+        padding: 10px 90px 0px 0px;
+    }
+}
+
+@media (max-width: 507px) {
+    #anyssa {
+        padding: 10px 50px 0px 0px;
+    }
 }
