--- a/src/style.css
+++ b/src/style.css
@@ -117,8 +117,8 @@ label #cancel {
         display: block;
         top: 1px;
         margin-right: 30px;
-        line-height: 0px;
-        padding-top: 70px;
+    
+        padding-top: 50px;
     }
 
    
@@ -217,6 +217,29 @@ label #cancel {
     margin-right: 2.4%;*/
     margin-top: 150px;
 }
+
+@media (max-width: 650px) {
+    .back-img {
+        background-image: none;
+    }
+    .back-img:before {
+        content: "";
+        display: block;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 500px;
+        z-index: -10;
+        background: url("./Data/Home/suze-trey-gray.jpeg") no-repeat center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        background-attachment: fixed;
+    }
+    
+}
+
 #secondlogo, .built {
     text-align: center;
     text-decoration: none;
